unpackaged/main/default/objects/Contract/fields/Company_Signed_Title__c.field-meta.xml
<CustomField>
    <fullName>Company_Signed_Title__c</fullName>
    <formula>CompanySigned.Title</formula>
    <label>Company Signed Title</label>
    <type>Text</type>
</CustomField>