unpackaged/main/default/objects/Contract/fields/Likelihood_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_to_Close__c</fullName>
    <formula>CASE(TEXT(Status),
 "New/Prospecting",0.1,
 "Engaged",0.25,
 "Agreement on Scope",0.5,
 "Presentation",0.6,
 "Negotiation",0.75,
 "In Approval Process",0.95,
 "Won",1,
 "Lost",0,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Likelihood to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>