unpackaged/main/default/objects/Contract/fields/Pipeline_Value__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Value__c</fullName>
    <formula>Amount__c *  Likelihood_to_Close__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>