unpackaged/main/default/objects/Contract/fields/Projected_Award_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Award_Date__c</fullName>
    <label>Projected Award Date</label>
    <type>Date</type>
</CustomField>