unpackaged/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>Amount__c</columns>
    <columns>Pipeline_Value__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.CREATED_DATE</columns>
    <columns>CONTRACT.LAST_UPDATE</columns>
    <columns>LAST_ACTIVITY_DATETIME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>notEqual</operation>
        <value>Lost</value>
    </filters>
    <label>All Contracts</label>
</ListView>